syntax = "proto3";

package user_api_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/sarastee/auth/pkg/user_api_v1;user_api_v1";

service UserAPIV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Update(UpdateRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

enum Role {
  unknown = 0;
  user = 1;
  admin = 2;
}

message UserInfo {
  string name = 1;
  string email = 2;
  Role role = 3;
}

message User {
  int64 id = 1;
  UserInfo info = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message UpdateUserInfo {
  google.protobuf.StringValue name = 1;
  google.protobuf.StringValue email = 2;
  Role role = 3;
}

message CreateRequest{
  UserInfo user = 1;
  string password = 2;
  string password_confirm = 3;
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  User user = 1;
}

message UpdateRequest {
  int64 id = 1;
  UpdateUserInfo update = 2;
}

message DeleteRequest {
  int64 id = 1;
}
